change some style

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-   <title>Clark DuVall</title>
-   <link rel="shortcut icon" href="/images/favicon.ico">
-   <meta name="description" content="Clark DuVall's website o' fun!">
+   <title>wlwang's home</title>
+   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+   <meta name="description" content="wlwang's resume">
    <link type="text/css" rel="stylesheet" href="/css/style.css">
 </head>
 <body>
